# wikitree-api-python

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  codeql.yml  publish.yml
examples/: surname_cloud.py
wikitree_api/: __init__.py  __main__.py  exceptions.py  fields_reference.py  session.py  utils.py
