[project]
name = "wikitree-api"
version = "0.1.0"
description = "Python client for the WikiTree API"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GPL-3.0-only" }
authors = [{ name = "Steven Harris", email = "steven@harrislineage.com" }]
keywords = ["wikitree", "api", "client", "genealogy"]
dependencies = ["requests>=2.28"]

[project.urls]
Homepage = "https://github.com/harrislineage/wikitree-api-python"
Repository = "https://github.com/harrislineage/wikitree-api-python"
Issues = "https://github.com/harrislineage/wikitree-api-python/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["wikitree_api*"]
