[metadata]
name = wikitree-api
version = 0.1.0
author = Steven Harris
author_email = steven@harrislineage.com
description = Python client for the WikiTree JSON API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/harrislineage/wikitree-api-python
license = GPL-3.0-only
keywords = wikitree, api, genealogy, client
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    requests>=2.28

[options.extras_require]
examples =
    matplotlib>=3.7
    wordcloud>=1.9

[options.package_data]
* = *.md, LICENSE